Fix bug of double scroll bars

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -14,7 +14,7 @@ body
   height:80vh;
 }
 .box-body{
-  height:80%;
+  height:auto;
 }
 
 form {
